objects/Integration_Files__c.object
<CustomObject>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Data__c</fullName>
        <label>Record Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>CFS</fullName>
                </value>
                <value>
                    <fullName>RCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Files</label>
    <nameField>
        <label>Integration Files Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>